* split config file sections * new style config

--- a/lxcweb.conf
+++ b/lxcweb.conf
@@ -1,6 +1,13 @@
 [main]
 port=9981
-logging=INFO
+
+[ssl]
+key=/etc/lxcweb/server.key
+cert=/etc/lxcweb/server.crt
+
+[log]
+loglevel=INFO
+logfile=
 
 [users]
 username=admin
