--- a/lxcweb.conf
+++ b/lxcweb.conf
@@ -1,6 +1,11 @@
 [main]
 port=9981
 
+[lxc]
+config=/etc/lxc/lxc.conf
+lxcpath=/var/lib/lxc
+sudo=on
+
 [ssl]
 key=/etc/lxcweb/server.key
 cert=/etc/lxcweb/server.crt
