* fix debian package bug

--- a/lxcweb.conf
+++ b/lxcweb.conf
@@ -1,10 +1,10 @@
 [main]
 port=9981
 
-[lxc]
-config=/etc/lxc/lxc.conf
-lxcpath=/var/lib/lxc
-sudo=on
+# [lxc]
+# config=/etc/lxc/lxc.conf
+# lxcpath=/var/lib/lxc
+# sudo=on
 
 [ssl]
 key=/etc/lxcweb/server.key
